<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.m100266177.mobiledevproject.Forecast">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityNameLbl"
        android:id="@+id/cityNameLabel"
        android:layout_alignBaseline="@+id/cityName"
        android:layout_alignBottom="@+id/cityName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityName"
        android:hint="@string/cityNameHint"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/cityNameLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sevenDayForecastLabel"
        android:id="@+id/sevenDayForecast"
        android:layout_below="@+id/cityName"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queryButtonLabel"
        android:id="@+id/queryButton"
        android:onClick="getForecast"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/cityForecast"
        android:layout_below="@+id/sevenDayForecast"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/queryButton" />
</RelativeLayout>
